# wasm_gerber_viewer

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html
.github/workflows/: rust.yml
css/: style.css
js/: main.js
wasm/: Cargo.toml
wasm/pkg/: package.json  wasm_gerber_processor.d.ts  wasm_gerber_processor.js  wasm_gerber_processor_bg.js  wasm_gerber_processor_bg.wasm  wasm_gerber_processor_bg.wasm.d.ts
wasm/src/: aperture.rs  geometry.rs  lib.rs  macro_.rs  parser.rs  parser_odb.rs  parser_state.rs  renderer.rs  shader.rs  shape.rs
wasm/src/parser/: aperture.rs  aperture_macro.rs  geometry.rs  state.rs
wasm/src/parser_odb/: features.rs  matrix.rs  symbols.rs
wasm/src/renderer/: buffer.rs  camera.rs  mod.rs  shader.rs
