[package]
name = "wasm_gerber_processor"
version = "0.1.0"
edition = "2021"

[lints.clippy]
too_many_arguments = "allow"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
i_triangle = "^0.38.0"
i_overlay = "~4.1.1"
console_error_panic_hook = { version = "0.1", optional = true }
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "WebGlRenderingContext",
    "WebGl2RenderingContext",
    "WebGlProgram",
    "WebGlShader",
    "WebGlBuffer",
    "WebGlFramebuffer",
    "WebGlTexture",
    "WebGlVertexArrayObject",
    "WebGlUniformLocation",
    "HtmlCanvasElement",
    "console",
] }

[profile.dev]
opt-level = 1
lto = false
codegen-units = 16
incremental = true
debug = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = false
panic = "abort"
debug = false
